--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.38", features = ["rkyv-32"] }
+configparser = "3.1.0"
 csv = "1.3.0"
 rayon = "1.10.0"
 rkyv = "0.7.44"
