--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,19 @@
 name = "unquantified"
 version = "0.1.0"
 edition = "2021"
+default-run = "server"
 
 [dependencies]
 chrono = { version = "0.4.38", features = ["rkyv-32"] }
 configparser = "3.1.0"
 csv = "1.3.0"
+futures-util = "0.3.30"
 rayon = "1.10.0"
 rkyv = "0.7.44"
 serde = { version = "1.0.203", features = ["derive"] }
 stopwatch = "0.0.7"
+tokio = { version = "1.38.0", features = ["full"] }
+warp = "0.3.7"
 zstd = "0.13.1"
 
 [lib]
@@ -18,5 +22,9 @@ name = "common"
 path = "src/common/lib.rs"
 
 [[bin]]
-name = "csv_parser"
-path = "src/csv_parser/main.rs"
+name = "csv-parser"
+path = "src/csv-parser/main.rs"
+
+[[bin]]
+name = "server"
+path = "src/server/main.rs"
