--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ futures-util = "0.3.30"
 rayon = "1.10.0"
 rkyv = "0.7.44"
 serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.118"
 stopwatch = "0.0.7"
 tokio = { version = "1.38.0", features = ["full"] }
 warp = "0.3.7"
