--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,18 @@ edition = "2021"
 default-run = "server"
 
 [dependencies]
-chrono = { version = "0.4.38", features = ["rkyv-32"] }
+axum = { version = "0.7.5", features = ["macros"] }
+chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
+chrono-tz = "0.9.0"
 configparser = "3.1.0"
 csv = "1.3.0"
 futures-util = "0.3.30"
 rayon = "1.10.0"
 rkyv = "0.7.44"
 serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.118"
 stopwatch = "0.0.7"
 tokio = { version = "1.38.0", features = ["full"] }
-warp = "0.3.7"
+tower-http = { version = "0.5.2", features = ["fs"] }
 zstd = "0.13.1"
 
 [lib]
