--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
 chrono-tz = "0.9.0"
 configparser = "3.1.0"
 csv = "1.3.0"
+dashmap = "6.0.1"
 futures-util = "0.3.30"
 rayon = "1.10.0"
 rkyv = "0.7.44"
