--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ configparser = "3.1.0"
 csv = "1.3.0"
 dashmap = "6.0.1"
 futures-util = "0.3.30"
+ndarray = "0.15.6"
+ndarray-stats = "0.5.1"
 rayon = "1.10.0"
 regex = "1.10.5"
 rkyv = "0.7.44"
