--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ dashmap = "6.0.1"
 futures-util = "0.3.30"
 rayon = "1.10.0"
 regex = "1.10.5"
-rkyv = "0.7.44"
+rmp-serde = "1.3.0"
 serde = { version = "1.0.203", features = ["derive"] }
 stopwatch = "0.0.7"
 tokio = { version = "1.38.0", features = ["full"] }
