--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ configparser = "3.1.0"
 csv = "1.3.0"
 dashmap = "6.0.1"
 futures-util = "0.3.30"
+lazy_static = "1.5.0"
 rayon = "1.10.0"
 regex = "1.10.5"
 rkyv = "0.7.44"
