--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,38 +1,7 @@
-[package]
-name = "unquantified"
-version = "0.3.0"
-edition = "2021"
-default-run = "server"
-
-[dependencies]
-anyhow = "1.0.86"
-axum = { version = "0.7.5", features = ["macros"] }
-chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
-chrono-tz = "0.9.0"
-configparser = "3.1.0"
-csv = "1.3.0"
-dashmap = "6.0.1"
-futures-util = "0.3.30"
-lazy_static = "1.5.0"
-rayon = "1.10.0"
-regex = "1.10.5"
-rkyv = "0.7.44"
-serde = { version = "1.0.203", features = ["derive"] }
-stopwatch = "0.0.7"
-strum = "0.26.3"
-strum_macros = "0.26.4"
-tokio = { version = "1.38.0", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["fs"] }
-zstd = "0.13.1"
-
-[lib]
-name = "common"
-path = "src/common/lib.rs"
-
-[[bin]]
-name = "csv-parser"
-path = "src/csv-parser/main.rs"
-
-[[bin]]
-name = "server"
-path = "src/server/main.rs"
+[workspace]
+resolver = "2"
+members = [
+    "unq-common",
+    "unq-parser",
+    "unq-server"
+]
