--- a/unq-strategy/Cargo.toml
+++ b/unq-strategy/Cargo.toml
@@ -8,3 +8,4 @@ unq-common = { version = "0.3.0", path = "../unq-common" }
 chrono = "0.4.38"
 chrono-tz = "0.9.0"
 anyhow = "1.0.86"
+once_cell = "1.19.0"
