--- a/unq-parser/Cargo.toml
+++ b/unq-parser/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "unq-parser"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 default-run = "unq-parser"
 
 [dependencies]
-unq-common = { version = "~0.3.0", path = "../unq-common" }
+unq-common = { version = "0.4.0", path = "../unq-common" }
 anyhow = "1.0.86"
 chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
 chrono-tz = "0.9.0"
