--- a/unq-common/Cargo.toml
+++ b/unq-common/Cargo.toml
@@ -8,8 +8,8 @@ anyhow = "1.0.86"
 chrono = { version = "0.4.38", features = ["rkyv-32", "serde"] }
 configparser = "3.1.0"
 csv = "1.3.0"
-dashmap = "6.0.1"
 lazy_static = "1.5.0"
+rayon = "1.10.0"
 regex = "1.10.5"
 rkyv = "0.7.44"
 serde = { version = "1.0.203", features = ["derive", "rc"] }
