--- a/unq-common/Cargo.toml
+++ b/unq-common/Cargo.toml
@@ -14,6 +14,7 @@ rayon = "1.10.0"
 regex = "1.10.5"
 rkyv = "0.7.44"
 serde = { version = "1.0.203", features = ["derive", "rc"] }
+stopwatch = "0.0.7"
 strum = "0.26.3"
 strum_macros = "0.26.4"
 zstd = "0.13.1"
